Full working gitlet